--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
     "hardhat-deploy": "^0.9.4",
-    "solidity-coverage": "^0.7.17",
-    "typescript": "^4.5.2",
-    "ts-node": "^10.4.0"
+    "solidity-coverage": "^0.7.17"
   }
 }
