chore: ignore local changes from submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "third_party/safe-contracts"]
 	path = third_party/safe-contracts
 	url = https://github.com/gnosis/safe-contracts
+	ignore = dirty
 [submodule "third_party/v2-periphery"]
 	path = third_party/v2-periphery
 	url = https://github.com/Uniswap/v2-periphery
+	ignore = dirty
 [submodule "third_party/v2-core"]
 	path = third_party/v2-core
 	url = https://github.com/Uniswap/v2-core
+	ignore = dirty
 [submodule "third_party/canonical-weth"]
 	path = third_party/canonical-weth
 	url = https://github.com/gnosis/canonical-weth.git
+	ignore = dirty
 [submodule "third_party/openzeppelin-contracts"]
 	path = third_party/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	ignore = dirty
