--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@gnosis.pm/mock-contract": "4.0.0",
+    "@gnosis.pm/safe-contracts": "^1.3.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
