--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.4.1",
+    "@tenderly/hardhat-tenderly": "^1.0.13",
     "@uniswap/lib": "4.0.1-alpha",
     "@uniswap/v2-core": "1.0.1",
     "chai": "^4.3.4",
