--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.4.1",
     "@tenderly/hardhat-tenderly": "^1.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "@uniswap/lib": "4.0.1-alpha",
     "@uniswap/v2-core": "1.0.1",
     "chai": "^4.3.4",
+    "eslint": "^8.4.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
